[lib]
crate-type = ["cdylib", "rlib"]

[package]
name = "image-opt"
version = "0.1.0"
authors = ["Danny Blue <dannybluedesign@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.0"
wasm-bindgen = { version = "0.2" }
wee_alloc = { version = "0.4.5", optional = true }

[profile.release]
opt-level = 's'

[features]
default = ["wee_alloc"]
